# winsdk_toast

./: README.md  setup.cfg
docs/source/: conf.py  index.rst
docs/source/Examples/: events.md  index.rst  minimal.md  pic_and_button.md
example/: complex.py  custom_handle.py  minimal.py  simple.py
src/winsdk_toast/: __init__.py  event.py  notifier.py  toast.py
