[metadata]
name = winsdk_toast
version = attr: winsdk_toast.__version__
description = A simple package for displaying Windows Toast Notification based on winsdk
author = modabao
author_email = mo_dabao@qq.com
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Mo-Dabao/winsdk_toast
license = MIT

[options]
package_dir =
    = src
packages = find:
install_requires = winsdk
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
* = LICENSE
